nginx/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: <YOUR_NAMESPACE>
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.17 
        # resources:
        #   limits:  
        #     memory: 200Mi
        #   requests:
        #     memory: 128Mi
        imagePullPolicy: Always
        ports:
        - containerPort: 80
