nginx/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: <YPUR_NAMESPACE>
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
  type : NodePort
  selector:
    app: nginx
